--- a/Pages/Product/Index.cshtml
+++ b/Pages/Product/Index.cshtml
@@ -1,15 +1,20 @@
 @page
-@model Lab3.Pages_Product.IndexModel
+@model Lab4.Pages_Product.IndexModel
+@using Microsoft.AspNetCore.Identity
 
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 @{
     ViewData["Title"] = "Index";
 }
 
 <h1>Index</h1>
-
+ @if (SignInManager.IsSignedIn(User))
+	{
 <p>
     <a asp-page="Create">Create New</a>
 </p>
+    }
 <table class="table">
     <thead>
         <tr>
@@ -37,11 +42,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Stock)
             </td>
+            @if (SignInManager.IsSignedIn(User))
+	{
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.ProductId">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.ProductId">Details</a> |
                 <a asp-page="./Delete" asp-route-id="@item.ProductId">Delete</a>
             </td>
+    }
         </tr>
 }
     </tbody>
